--- a/EncurtadorUrl.csproj
+++ b/EncurtadorUrl.csproj
@@ -13,5 +13,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4"/>
     <PackageReference Include="Castle.Core" Version="4.3.1"/>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0"/>
+    <PackageReference Include="AutoMapper" Version="8.0.0"/>
   </ItemGroup>
 </Project>
